--- a/src/App.css
+++ b/src/App.css
@@ -234,11 +234,13 @@ html {
 .heading {
   font-size: 2.4em !important;
   padding-left: 50px !important;
+  color: white;
 }
 
 .heading-name {
   font-size: 2.5em !important;
   padding-left: 45px !important;
+  color: white;
 }
 
 .main-name {
