--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 150vh;
+  height: 100%;
 }
 
 /* Navbar Section  */
